// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderTimeIntervals should render empty time interval 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [],
    "direction": "column",
    "gap": 1,
  },
  "type": {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
}
`;

exports[`renderTimeIntervals should render time interval with kitchen sink 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "{"weekdays":["monday","tuesday:thursday","sunday"],"times":[{"start_time":"12:00","end_time":"13:00"},{"start_time":"14:00","end_time":"15:00"}],"days_of_month":["1","2:4","31"],"location":"Europe/Berlin","months":["january","february:march","december"],"years":["2019","2020:2021"]}0",
        "props": {
          "children": {
            "$$typeof": Symbol(react.transitional.element),
            "_owner": null,
            "_store": {},
            "key": null,
            "props": {
              "children": [
                "Times: 12:00 - 13:00 [Europe/Berlin] and 14:00 - 15:00 [Europe/Berlin] Weekdays: Mon, Tue-Thu, Sun",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
                "Days of the month: 1, 2:4, 31 | Months: january, february:march, december | Years: 2019, 2020:2021",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
              ],
            },
            "type": "div",
          },
        },
        "type": Symbol(react.fragment),
      },
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "{"weekdays":["monday","tuesday:thursday","sunday"],"times":[{"start_time":"12:00","end_time":"13:00"},{"start_time":"14:00","end_time":"15:00"}],"days_of_month":["1","2:4","31"],"location":"Europe/Berlin","months":["january","february:march","december"],"years":["2019","2020:2021"]}1",
        "props": {
          "children": {
            "$$typeof": Symbol(react.transitional.element),
            "_owner": null,
            "_store": {},
            "key": null,
            "props": {
              "children": [
                "Times: 12:00 - 13:00 [Europe/Berlin] and 14:00 - 15:00 [Europe/Berlin] Weekdays: Mon, Tue-Thu, Sun",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
                "Days of the month: 1, 2:4, 31 | Months: january, february:march, december | Years: 2019, 2020:2021",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
              ],
            },
            "type": "div",
          },
        },
        "type": Symbol(react.fragment),
      },
    ],
    "direction": "column",
    "gap": 1,
  },
  "type": {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
}
`;

exports[`renderTimeIntervals should render time interval with time range 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "{"times":[{"start_time":"12:00","end_time":"13:00"},{"start_time":"14:00","end_time":"15:00"}]}0",
        "props": {
          "children": {
            "$$typeof": Symbol(react.transitional.element),
            "_owner": null,
            "_store": {},
            "key": null,
            "props": {
              "children": [
                "Times: 12:00 - 13:00 [UTC] and 14:00 - 15:00 [UTC] Weekdays: All",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
                "Days of the month: All | Months: All | Years: All",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
              ],
            },
            "type": "div",
          },
        },
        "type": Symbol(react.fragment),
      },
    ],
    "direction": "column",
    "gap": 1,
  },
  "type": {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
}
`;

exports[`renderTimeIntervals should render time interval with weekdays 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "{"weekdays":["monday","tuesday:thursday","sunday"]}0",
        "props": {
          "children": {
            "$$typeof": Symbol(react.transitional.element),
            "_owner": null,
            "_store": {},
            "key": null,
            "props": {
              "children": [
                "Times: All Weekdays: Mon, Tue-Thu, Sun",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
                "Days of the month: All | Months: All | Years: All",
                {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {},
                  "type": "br",
                },
              ],
            },
            "type": "div",
          },
        },
        "type": Symbol(react.fragment),
      },
    ],
    "direction": "column",
    "gap": 1,
  },
  "type": {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
}
`;
